--- a/src/views/Home/HomeView.module.scss
+++ b/src/views/Home/HomeView.module.scss
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  max-height: 100vh;
+  max-height: 100dvh;
   overflow: hidden;
   transition: 0.7s;
 }
@@ -75,13 +75,13 @@
   }
 
   &[data-is-open="true"] {
-    min-height: 85vh;
+    min-height: 85dvh;
     height: fit-content;
     opacity: 1;
     padding: 5rem 1rem 1rem 1rem;
 
     @media (max-width: 768px) {
-      min-height: 87vh;
+      min-height: 87dvh;
       padding: 4rem 1rem 3rem 1rem;
     }
   }
@@ -92,15 +92,15 @@
   width: 100%;
   background-color: red;
   display: flex;
-  height: 50vh;
+  height: 50dvh;
   border-bottom: 1rem black solid;
   transition: 0.7s;
 
   &[data-is-open="true"] {
-    height: 15vh;
+    height: 15dvh;
 
     @media (max-width: 760px) {
-      height: 13vh;
+      height: 13dvh;
     }
   }
 }
@@ -108,7 +108,7 @@
 .footer {
   width: 100%;
   background-color: white;
-  height: 50vh;
+  height: 50dvh;
   border-top: 1rem black solid;
   transition: 0.6s;
 
@@ -118,10 +118,10 @@
 }
 
 .pokeButton {
-  border-radius: 100vh;
-  width: 24vh;
-  height: 24vh;
-  margin: 38vh auto 0 auto;
+  border-radius: 100dvh;
+  width: 24dvh;
+  height: 24dvh;
+  margin: 38dvh auto 0 auto;
   position: relative;
   display: flex;
   border: 0.8rem black solid;
@@ -136,20 +136,20 @@
   }
 
   @media (max-width: 768px) {
-    width: 18vh;
-    height: 18vh;
-    margin: 41vh auto 0 auto;
+    width: 18dvh;
+    height: 18dvh;
+    margin: 41dvh auto 0 auto;
   }
 
   &[data-is-open="true"] {
-    margin: 3vh auto 0 auto;
+    margin: 3dvh auto 0 auto;
 
     span {
       display: none;
     }
 
     @media (max-width: 768px) {
-      margin: 3vh auto 0 auto;
+      margin: 3dvh auto 0 auto;
     }
   }
 }
@@ -177,6 +177,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 0.8;
   }
