--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,10 @@
 $primary-color: #ffbd4a;
+$white: #ffffff;
+$red: #ff0000;
+$black: #000000;
+$pink: #ff3973;
 
 // Breakpoints
 $mobile-sm: 360px;
+$pokeballSize: 120px;
+$pokeballBorderSize: 16px;
