--- a/src/views/Home/HomeView.module.scss
+++ b/src/views/Home/HomeView.module.scss
@@ -1,30 +1,33 @@
 @use "@/styles/variables" as var;
 
 .container {
-  display: flex;
-  flex-direction: column;
   max-height: 100dvh;
   overflow: hidden;
-  transition: 0.7s;
+  display: flex;
+  flex-direction: column;
 }
 
 .mainContainer {
-  transition: 0.7s;
-  min-height: 0;
   height: 0;
-  opacity: 0.1;
+  min-height: 0;
+  max-width: 100%;
+  padding: 0 1rem;
+
   background: radial-gradient(circle, #1d1d1d 0%, #000 80%);
+
   display: flex;
   flex-direction: column;
-  max-width: 100%;
-  overflow: hidden;
   justify-content: space-between;
   align-items: center;
-  color: white;
+  gap: 1rem;
+
+  overflow: hidden;
+  color: var.$white;
 
   > * {
     max-width: 400px;
     text-align: center;
+    opacity: 0;
   }
 
   a:hover {
@@ -32,29 +35,18 @@
     border-color: var.$primary-color;
   }
 
-  h1 {
-    max-width: 35rem;
-    text-align: center;
-    display: flex;
-
-    @media (max-width: 760px) {
-      max-width: 20rem;
-    }
-  }
-
   > a {
     border: 1px white solid;
     padding: 0.5rem 1rem;
     border-radius: 0.2rem;
     box-shadow: 0px 4px 5px 2px #0000009e;
-    transition: 0.2s;
 
     &:hover {
       box-shadow: 0px 4px 5px 2px #000000;
     }
   }
 
-  > div {
+  > section {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,48 +60,35 @@
     }
   }
 
-  @media (max-width: 768px) {
-    min-height: 0;
-    padding: 0;
-  }
-
   &[data-is-open="true"] {
-    min-height: 85dvh;
-    height: fit-content;
-    opacity: 1;
-    padding: 5rem 1rem 1rem 1rem;
-
-    @media (max-width: 768px) {
-      min-height: 87dvh;
-      padding: 4rem 1rem 3rem 1rem;
+    > * {
+      opacity: 1;
     }
+    height: 85dvh;
+    padding: 5rem 1rem 3rem 1rem;
   }
 }
 
-.header {
-  max-width: 100%;
+.header,
+.footer {
   width: 100%;
-  background-color: red;
-  display: flex;
   height: 50dvh;
-  border-bottom: 1rem black solid;
-  transition: 0.7s;
+}
+
+.header {
+  position: relative;
+  background-color: var.$red;
+
+  border-bottom: var.$pokeballBorderSize var.$black solid;
 
   &[data-is-open="true"] {
     height: 15dvh;
-
-    @media (max-width: 760px) {
-      height: 13dvh;
-    }
   }
 }
 
 .footer {
-  width: 100%;
-  background-color: white;
-  height: 50dvh;
-  border-top: 1rem black solid;
-  transition: 0.6s;
+  background-color: var.$white;
+  border-top: var.$pokeballBorderSize var.$black solid;
 
   &[data-is-open="true"] {
     height: 0;
