--- a/src/components/DevelopedBy/DevelopedBy.module.scss
+++ b/src/components/DevelopedBy/DevelopedBy.module.scss
@@ -19,7 +19,7 @@
     margin: 0 0.5rem;
   }
 
-  @media (max-width: var.$mobile-sm) {
+  @media (max-width: var.$breakpoint-mobile-sm) {
     font-size: 1rem;
   }
 }
